# rental_ai

./: .gitignore  README.md  collect_urls.py  db.py  eda_listings.ipynb  pyproject.toml  requirements.txt  scrape_listings_sync.py  sitemap.py
docs/: TODO.md  data_issues.md  eda_listings.txt  eda_urls.txt
test_scripts/: listing_scraper_tester.py
