[project]
name = "bezrealitky-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "jupyterlab>=4.5.5",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "psycopg>=3.3.3",
    "seaborn>=0.13.2",
]
